[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Jo Shinonome <jo.shinonome@gmail.com>"]
description = "jasmine"

[workspace]
resolver = "2"
members = ["crates/*", "py-jasmine"]

[profile.release]
strip = true
opt-level = 3
codegen-units = 3

[profile.release-lto]
inherits = "release"
lto = true

[workspace.dependencies.polars]
version = "0.44.2"
